SVN
-------------------------------


Version 1.1-M3, Jan 29, 2007
-------------------------------

CTF:   Resolved issue CASTOR-1860 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Move CTF-XML classes to a new package
       Details: http://jira.codehaus.org/browse/CASTOR-1860
       (Edward - 20070128)

Gen:   Resolved issue CASTOR-1859 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Clean up JavaDoc build errors
       Details: http://jira.codehaus.org/browse/CASTOR-1859
       (Edward - 20070128)

CTF:   Resolved issue CASTOR-1858 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Move XML CTF from src/tests to xmlctf
       Details: http://jira.codehaus.org/browse/CASTOR-1858
       (Edward - 20070128)

All:   Resolved issue CASTOR-1644 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Refactored creation of ClassDescriptors through MappingLoader.
       Details: http://jira.codehaus.org/browse/CASTOR-1644
       (Ralf - 20070127)

Gen:   Resolved issue CASTOR-1854 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with not closed file handles for '.castor.cdr' during code generation.
       Details: http://jira.codehaus.org/browse/CASTOR-1854
       (Werner - 20070122)

XML:   Resolved issue CASTOR-1851 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add to CTF the ability to control whether or not code is generated from imported schema
       Details: http://jira.codehaus.org/browse/CASTOR-1851
       (Edward - 20070118)

Gen:   Resolved issue CASTOR-1843 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Re-generated classes for binding files, in preparation for adding support for
       new <componentBinding>
       Details: http://jira.codehaus.org/browse/CASTOR-1843
       (Werner - 20070118)

XML:   Resolved issue CASTOR-1847 using contribution from Edward Kuns [edward.kuns@aspect.com]